--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="./Images/Foodie.png">
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <!-- Google Fonts -->
@@ -17,12 +18,12 @@
 <body>
   <header>
     <nav>
-      <a href="#" class="company-name">Foodie</a>
+      <a href="#" class="company-name"><span><ion-icon name="restaurant-outline" class="company-icon"></ion-icon></span>Foodie</a>
       <ul>
-        <li><a href="#" class="link active">Home</a></li>
-        <li><a href="#" class="link">Services</a></li>
-        <li><a href="#" class="link">Menu</a></li>
-        <li><a href="#" class=" contact">Reservation</a></li>
+        <li><a href="#hero-section" class="link active">Home</a></li>
+        <li><a href="#feature-section" class="link">Services</a></li>
+        <li><a href="#menu-section" class="link">Menu</a></li>
+        <li><a href="#reservation" class=" contact">Reservation</a></li>
       </ul>
     </nav>
   </header>
@@ -33,8 +34,8 @@
         <div class="grid2">
           <div class="text-box">
             <h1 class="heading-primary">Make Your Friends have the best <span>Appetite</span> in their life!</h1>
-            <button type="button "class="btn btn-sm ">See our Menu</button>
-            <button type="button "class="btn btn-lg btn-outline-danger">Reservation</button>
+            <button type="button "class="btn btn-lg btn-danger mt-5 me-2">See our Menu</button>
+            <button type="button "class="btn btn-lg btn-outline-danger mt-5">Reservation</button>
           </div>
           <div class="d-flex">
             <img src="./Images/food/hero-aside.png" class="aside-img" alt="">
@@ -43,7 +44,182 @@
         </div>
       </div>
     </section>
+
+<section id="feature-section" class="feature-section">
+  <div class="container">
+    <h3 class="main-heading">Our Services</h3>
+    <p class="subheading">We love to welcome our guest with great satisfaction!</p>
+    <div class="row">
+      <div class="col-md-4 col-4">
+        <div class="card card-" style="width: 18rem;">
+          <div class="card-body">
+            <ion-icon name="fast-food-outline" class="icon"></ion-icon>
+            <h6 class="card-subtitle mb-2 ft-subheading mt-auto">Fine Dining</h6>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto unde voluptate ut? Neque aut exercitationem culpa saepe, sit, fuga libero, assumenda odit id laborum perferendis? Ratione laudantium saepe incidunt modi.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-4">
+        <div class="card card--" style="width: 18rem;">
+          <div class="card-body">
+            <ion-icon name="happy-outline" class="icon"></ion-icon>
+            <h6 class="card-subtitle mb-2 ft-subheading mt-auto">Quick Service</h6>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto unde voluptate ut? Neque aut exercitationem culpa saepe, sit, fuga libero, assumenda odit id laborum perferendis? Ratione laudantium saepe incidunt modi.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-4">
+        <div class="card card---" style="width: 18rem;">
+          <div class="card-body">
+            <ion-icon name="heart-outline" class="icon"></ion-icon>
+            <h6 class="card-subtitle mb-2 ft-subheading mt-auto">Customer Statisfaction</h6>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto unde voluptate ut? Neque aut exercitationem culpa saepe, sit, fuga libero, assumenda odit id laborum perferendis? Ratione laudantium saepe incidunt modi.</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+<section id="menu-section" class="menu-section">
+  <div class="container">
+    <h3 class="main-heading menu">Our Menu<span class="mx-2"><ion-icon name="restaurant-outline" class="company-icon menu-icon"></ion-icon></span></h3>
+    <div class="row">
+      <div class="col-md-4 col-4">
+        <div class="card card-menu" style="width: 18rem;">
+          <img src="./Images/food/Burger.jpg" class="card-img-top" alt="Burger">
+          <img src="./Images/stars/5stars.png" class="stars-img mx-2" alt="5 Stars">
+          <div class="card-body">
+            <h5 class="card-title menu-heading">Burger <span>$12.99</span></h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et tenetur harum veniam animi vel nulla, illo consequatur, eius sit possimus quo quae deleniti rerum neque eaque reiciendis facilis porro iste.</p>
+            <button type="button "class="btn btn-lg btn-danger ">Order Now</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-4">
+        <div class="card card-menu" style="width: 18rem;">
+          <img src="./Images/food/fruits.jpg" class="card-img-top fruit-img" alt="Fruits and vegetable">
+          <img src="./Images/stars/5stars.png" class="stars-img mx-2" alt="5 Stars">
+          <div class="card-body">
+            <h5 class="card-title menu-heading">Fruits and vegetable <span>$13.99</span></h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et tenetur harum veniam animi vel nulla, illo consequatur, eius sit possimus quo quae deleniti rerum neque eaque reiciendis facilis porro iste.</p>
+            <button type="button "class="btn btn-lg btn-danger ">Order Now</button>
+          </div>
+        </div>
+      </div>
+    <div class="col-md-4 col-4">
+      <div class="card card-menu card-3" style="width: 18rem; height: 27rem;">
+        <img src="./Images/food/Deluxe fruit.jpg" class="card-img-top deluxe-img card-img3" alt="Deluxe Fruits">
+        <img src="./Images/stars/5stars.png" class="stars-img mx-2 helper--"  alt="5 Stars">
+        <div class="card-body ">
+          <h5 class="card-title menu-heading">Deluxe Fruits <span>$13.99</span></h5>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et tenetur harum veniam animi vel nulla, illo consequatur, eius sit possimus quo quae deleniti rerum neque eaque reiciendis facilis porro iste.</p>
+          <button type="button "class="btn btn-lg btn-danger helper- ">Order Now</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4 col-4">
+      <div class="card card-menu mt-5" style="width: 18rem;">
+        <img src="./Images/food/fish and fruits-1.jpg" class="card-img-top deluxe-img" alt="Deluxe Fruits">
+        <img src="./Images/stars/5stars.png" class="stars-img mx-2" alt="5 Stars">
+        <div class="card-body">
+          <h5 class="card-title menu-heading">Fish and Fruits <span>$14.99</span></h5>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et tenetur harum veniam animi vel nulla, illo consequatur, eius sit possimus quo quae deleniti rerum neque eaque reiciendis facilis porro iste.</p>
+          <button type="button "class="btn btn-lg btn-danger ">Order Now</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4 col-4">
+      <div class="card card-menu mt-5" style="width: 18rem;">
+        <img src="./Images/food/Lettuce fish and rice.jpg" class="card-img-top " alt="Deluxe Fruits">
+        <img src="./Images/stars/5stars.png" class="stars-img mx-2" alt="5 Stars">
+        <div class="card-body">
+          <h5 class="card-title menu-heading">Fish Lettuce and Rice <span>$21.99</span></h5>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et tenetur harum veniam animi vel nulla, illo consequatur, eius sit possimus quo quae deleniti rerum neque eaque reiciendis facilis porro iste.</p>
+          <button type="button "class="btn btn-lg btn-danger ">Order Now</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4 col-4">
+      <div class="card card-menu mt-5" style="width: 18rem;">
+        <img src="./Images/food/pecan salad and fish.jpg" class="card-img-top deluxe-img" alt="Deluxe Fruits">
+        <img src="./Images/stars/5stars.png" class="stars-img mx-2" alt="5 Stars">
+        <div class="card-body">
+          <h5 class="card-title menu-heading">Pecan Salad and Fish <span>$21.99</span></h5>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et tenetur harum veniam animi vel nulla, illo consequatur, eius sit possimus quo quae deleniti rerum neque eaque reiciendis facilis porro iste.</p>
+          <button type="button "class="btn btn-lg btn-danger ">Order Now</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+  <div class="view-more-box">
+    <button type="button" id ="more-menu"class="btn btn-lg btn-outline-danger mt-5 btn--">View more</button>
+  </div>
+</section>
+
+<section id="testimonial-section" class="testimonial-section">
+  <h4 class="main-heading mb-5 testimonial-heading">Check out what our customer are saying!</h4>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 col-4 mt-5">
+        <div class="card card-test" style="width: 18rem;">
+          <img src="./Images/testimonal/aftheem-ibrahim.jpg" class="card-img-top " alt="Deluxe Fruits">
+          <img src="./Images/stars/5stars.png" class="stars-img  stars--" alt="5 Stars">
+          <div class="card-body">
+            <p class="card-text description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et tenetur harum veniam animi vel nulla, illo consequatur, eius sit possimus quo quae deleniti rerum neque eaque reiciendis facilis porro iste.</p>
+            <h5 class="testimonial-subheading">Aftheem Ibrahim</h5>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-4 mt-5">
+        <div class="card card-test" style="width: 18rem;">
+          <img src="./Images/testimonal/joseph-gonzalez.jpg" class="card-img-top " alt="Deluxe Fruits">
+          <img src="./Images/stars/5stars.png" class="stars-img  stars--" alt="5 Stars">
+          <div class="card-body">
+            <p class="card-text description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et tenetur harum veniam animi vel nulla, illo consequatur, eius sit possimus quo quae deleniti rerum neque eaque reiciendis facilis porro iste.</p>
+            <h5 class="testimonial-subheading">Joseph Gonzalez</h5>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4 col-4 mt-5">
+        <div class="card card-test" style="width: 18rem;">
+          <img src="./Images/testimonal/petr-sevcovic-HzDF-rxlSeM-unsplash.jpg" class="card-img-top " alt="Deluxe Fruits">
+          <img src="./Images/stars/5stars.png" class="stars-img  stars--" alt="5 Stars">
+          <div class="card-body">
+            <p class="card-text description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et tenetur harum veniam animi vel nulla, illo consequatur, eius sit possimus quo quae deleniti rerum neque eaque reiciendis facilis porro iste.</p>
+            <h5 class="testimonial-subheading">Petr Sevcovic</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+  <section id="reservation" class="reservation">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">assasa</div>
+        <div class="col-md-6">assasa</div>
+      </div>
+    </div>
+  </section>
   </main>
+
+  <!-- ion-icons -->
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+  <!-- Bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
