--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Italianno&family=Roboto&display=swap" rel="stylesheet">
   <!-- Style -->
   <link rel="stylesheet" href="./style/style.css">
+  <link rel="stylesheet" href="./style/animation.css">
   <link rel="stylesheet" href="./style/mediaqueries.css">
   <title>Foodie</title>
 </head>
 <body>
+ 
   <header>
     <nav>
       <a href="#hero-section" class="company-name"><span><ion-icon name="restaurant-outline" class="company-icon"></ion-icon></span>Foodie</a>
@@ -41,7 +43,7 @@
         <div class="row">
           <div class=" col-md-6">
             <div class="text-box">
-              <h1 class="heading-primary">Make Your Friends have the best <span>Appetite</span> in their life!</h1>
+              <h1 class="heading-primary ">Make Your Friends have the best <span class="appetite">Appetite</span> in their life!</h1>
               <button type="button "class="btn btn-lg btn-danger mt-5 me-2">See our Menu</button>
               <button type="button "class="btn btn-lg btn-outline-danger mt-5">Reservation</button>
             </div>
@@ -257,8 +259,11 @@
   
   <!-- Google Api -->
   <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
+  <!-- Scroll reveal -->
+  <script src="https://unpkg.com/scrollreveal"></script>
   <!-- App.js -->
   <script src="app.js"></script>
+
   <!-- ion-icons -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
