--- a/index.html
+++ b/index.html
@@ -216,6 +216,15 @@
     </div>
   </div>
 </section>
+<!-- Modal -->
+  <div class="modal" id="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <h1>Enjoy free deserts on our behalf!</h1>
+      <img src="./Images/popup.jpg" class="img-popup" alt="">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi itaque ipsum suscipit reiciendis? Ad quo cupiditate libero molestias aspernatur facere, corrupti cumque aliquid, aut alias suscipit adipisci? Magni, recusandae aut.</p>
+    </div>
+  </div>
 
   <section id="reservation" class="reservation">
     <h4 class="main-heading reserve-heading">Book Your Table, Skip the line!</h4>
@@ -246,7 +255,7 @@
             </div>
 
             <div class="form-btn">
-              <button type="button "class="btn btn-lg contact-  mt-5">Submit</button>
+              <button type="button "class="btn btn-lg contact-  mt-5 ">Submit</button>
             </div>
 
           </form>
